--- a/Assignment1/app/src/main/res/layout/activity_main.xml
+++ b/Assignment1/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/shortcut_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview"
-        tools:listitem="@layout/list_item"
-        />
+        android:orientation="vertical">
 
+        <FrameLayout
+            android:id="@+id/navigationBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+        </FrameLayout>
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/list_item" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
